--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Playwright
 node_modules/
 /test-results/
@@ -6,4 +5,9 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+# Environment variables file
 .env
+
+# Output files
+/output/
